--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@ body {
     height: 100vh;
     padding: 0;
     margin: 0;
+    background-color: #111;
+    color: #000;
 }
 
 input, button, select {
@@ -40,7 +42,15 @@ input, button, select {
 #res {
     display: flex;
     font-family: sans-serif;
-    background-color: #ddd;
+    background-color: rgb(185, 185, 185);
     padding: 0.5rem 1.4rem 0.5rem 1.4rem;
+    border-radius: 16px;
+}
+
+#card {
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+    background-color: #ddd;
     border-radius: 24px;
 }
